<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/home_logo" />

    <Button
        android:id="@+id/wordBankButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="136dp"
        android:layout_height="86dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="39dp"
        android:text="@string/word_bank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/storyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeImage"
        app:layout_constraintVertical_bias="0.537" />

    <Button
        android:id="@+id/storyButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="136dp"
        android:layout_height="86dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="40dp"
        android:text="@string/stories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toEndOf="@+id/wordBankButton"
        app:layout_constraintTop_toBottomOf="@+id/homeImage"
        app:layout_constraintVertical_bias="0.492" />
</androidx.constraintlayout.widget.ConstraintLayout>