<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

       <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorPrimaryLight">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorWhite"
            tools:context=".main.Quiz.view.QuizActivity">


            <Button
                android:id="@+id/option1"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonBlue"
                android:text="@string/button"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <Button
                android:id="@+id/option2"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonBlue"
                android:text="@string/button"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.88"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <Button
                android:id="@+id/option3"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonBlue"
                android:text="@string/button"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.94" />

            <Button
                android:id="@+id/option4"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonBlue"
                android:text="@string/button"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.88"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.94" />

            <ImageView
                android:id="@+id/quizImage"
                android:layout_width="153dp"
                android:layout_height="164dp"
                android:layout_marginStart="129dp"
                android:layout_marginEnd="129dp"
                android:contentDescription="@string/word_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32"
                app:srcCompat="@drawable/ic_apple" />

            <ImageView
                android:id="@+id/speakerIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="181dp"
                android:contentDescription="@string/speakerIconDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.645"
                app:srcCompat="@drawable/ic_volume_up_24dp" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:contentDescription="@string/star2Description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04000002"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/star1Description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.07999998"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/star3Description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002"
                app:srcCompat="@drawable/ic_star" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.cardview.widget.CardView>